--- a/parking-space-counter-master/parking-space-counter-master/requirements.txt
+++ b/parking-space-counter-master/parking-space-counter-master/requirements.txt
@@ -1,6 +1,5 @@
-opencv-python==4.6.0.66
-scikit-learn==1.1.3
-pandas==1.5.1
-Pillow==9.3.0
-scikit-image==0.21.0
-matplotlib==3.6.2
+streamlit
+opencv-python-headless
+numpy
+matplotlib
+Pillow
