--- a/parking-space-counter-master/parking-space-counter-master/requirements.txt
+++ b/parking-space-counter-master/parking-space-counter-master/requirements.txt
@@ -1,7 +1,7 @@
-matplotlib==3.6.2
-numpy==1.23.5
-opencv_contrib_python==4.11.0.86
-opencv_python==4.6.0.66
-opencv_python==4.11.0.86
-skimage==0.25.2
-streamlit==1.50.0
+streamlit==1.32.0
+opencv-python-headless==4.9.0.80
+numpy==1.26.4
+pandas==2.2.1
+scikit-image==0.22.0
+matplotlib==3.8.3
+Pillow==10.2.0
